remove my email password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ server.servlet.context-path=/secure
 spring.mail.default-encoding=UTF-8
 spring.mail.host=smtp.gmail.com
 spring.mail.username=springboot87@gmail.com
-spring.mail.password=@hi@x212
+spring.mail.password=
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.test-connection=false
